<resources>
    <string name="app_name">客户端</string>
    <string name="action_settings">设置</string>
    <string name="server_address">服务器地址:</string>
    <string name="port">端口</string>
    <string name="server_ip">服务器IP</string>
    <string name="server_ip_hint">请输入连接服务器IP</string>
    <string name="log_info">连接信息:</string>
    <string name="connect_state">服务端连接状态</string>
    <string name="adb_connect_state">ADB连接状态</string>
    <string name="disconnect">未连接</string>
    <string name="server_ip_value">192.168.1.</string>
    <string name="default_port">5555</string>
    <string name="connecting">连接中...</string>
    <string name="reset">重置</string>
    <string name="apply">应用</string>
    <string name="stop">停止</string>
    <string name="start_connect">开始连接一个远程服务...</string>
    <string name="connect_info">Interrupt,connecting now...</string>
    <string name="root_fail">获取Root权限失败</string>
    <string name="change_system_success">升级为系统应用</string>
    <string name="change_system_fail">升级为系统应用失败!</string>
    <string name="local_address">本机IP:</string>
    <string name="connect">连接</string>
    <string name="server_address_empty">服务器地址为空</string>
    <string name="server_address_error">服务器地址异常</string>
    <string name="reconnect_count_value">正在尝试重新联接:%1$d次</string>
    <string name="server_address_value">连接成功:%1$s</string>
    <string name="bind_service_failed">绑定服务失败</string>
    <string name="ok">确定</string>
    <string name="connect_complete">连接成功</string>
    <string name="connect_failed">连接失败</string>
    <string name="connect_failed_value">连接失败:%1$s</string>
    <string name="already_connect">服务器:%1$s 己连接!</string>
    <string name="connect_interrupt">连接中断</string>
    <string name="disconnect_complete">成功中断服务</string>
    <string name="disconnect_failed">中断操作失败</string>
    <string name="reconnect_complete_value">设备连接成功,尝试连接:%1$d次</string>
    <string name="start_connect_adb_address">开始连接设备Adb 地址为:%1$s</string>
    <string name="set_connect_port_complete">设置 Adb无线调试端口成功!</string>
    <string name="set_connect_port_failed">设置无线调试端口失败,开始重试</string>
    <string name="connect_adb_complete">设备:%1$s连接Adb成功!\n</string>
    <string name="app_alert">应用提示</string>
    <string name="debug_message">连接调试手机满足以下条件\n1:手机root,并授权,则手机会自动连接无线调试\n2:手机连入usb并开启调试模式\n以上,操作后,此弹窗会自动消失</string>
    <string name="user_restricted">用户主动拒绝了软件安装,如果非手动拒绝,请检测手机安全中心,是否设置了拒绝安装此应用设置,若己解决,重新连接adb,可再次尝试</string>
    <string name="current_connecting">当前正在连接设备:%1$s</string>
    <string name="open_wifi_service">此服务必须打开wifi!\n并与服务器连接到同一个网络段内!</string>
    <string name="open_wifi">打开 Wifi</string>
    <string name="wifi_service_not_same">连接 Wifi 网络不同,请切换</string>
    <string name="reset_wifi">重置 wifi</string>
    <string name="open_wifi_ing">正在打开 Wifi</string>
    <string name="desc">打开后,会自动应对一些自动化测试需要的简单操作.如自动安装程序的提示</string>
    <string name="open_accessibility_service">请打开系统辅助服务,否则导致部分功能障碍</string>
    <string name="accessibility_settings">辅助服务</string>
    <string name="exit">退出</string>

</resources>
